--- a/config/database.yml
+++ b/config/database.yml
@@ -48,9 +48,6 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  adapter: postglesql
-  encoding: unicode
-  pool: 5
+  <<: *default
   database: tasklist_production
-  username: tasklist
-  password: <%= ENV['TASKLIST_DATABASE_PASSWORD'] %>
+  
